--- a/Packer_Projekt/MainWindow.xaml
+++ b/Packer_Projekt/MainWindow.xaml
@@ -7,6 +7,9 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Button Content="Verpacken" HorizontalAlignment="Left" Margin="135,144,0,0" VerticalAlignment="Top" Width="106" Height="58" Click="Verpacken"/>
+        <Button Content="Entpacken" HorizontalAlignment="Left" Margin="443,144,0,0" VerticalAlignment="Top" Width="118" Height="49"/>
+        <TextBox x:Name="Testbox" HorizontalAlignment="Left" Height="42" Margin="200,71,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="158"/>
+
     </Grid>
 </Window>
