--- a/Packer_Projekt/MainWindow.xaml
+++ b/Packer_Projekt/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button Content="Verpacken" HorizontalAlignment="Left" Margin="52,106,0,0" VerticalAlignment="Top" Width="169" Height="144" Click="Verpacken"/>
+        <Button Content="Verpacken" HorizontalAlignment="Left" Margin="52,106,0,0" VerticalAlignment="Top" Width="169" Height="144" Click="Verpacken_Click"/>
         <Button x:Name="Entpacken" Content="Entpacken" HorizontalAlignment="Left" Margin="300,198,0,0" VerticalAlignment="Top" Width="172" Height="144" Click="Entpacken_Click"/>
         <TextBox x:Name="Testbox" HorizontalAlignment="Left" Height="42" Margin="52,26,0,0" TextWrapping="Wrap" Text="Dateiname" VerticalAlignment="Top" Width="648"/>
 
