Verpacken und Entpacken fertig, Oberflächenanpassungen angefangen

--- a/Packer_Projekt/MainWindow.xaml
+++ b/Packer_Projekt/MainWindow.xaml
@@ -6,11 +6,14 @@
         xmlns:local="clr-namespace:Packer_Projekt"
         mc:Ignorable="d"
         Title="Selfmade-Packer" Height="394.5" Width="560">
-    <Grid>
+    <Grid x:Name="tb_Datei">
         <Button Content="Verpacken" HorizontalAlignment="Left" Margin="24,198,0,0" VerticalAlignment="Top" Width="168" Height="144" Click="Verpacken_Click"/>
         <Button x:Name="Entpacken" Content="Entpacken" HorizontalAlignment="Left" Margin="300,198,0,0" VerticalAlignment="Top" Width="172" Height="144" Click="Entpacken_Click"/>
-        <TextBox x:Name="Testbox" HorizontalAlignment="Left" Height="21" Margin="24,26,0,0" TextWrapping="Wrap" Text="Dateipfad" VerticalAlignment="Top" Width="287"/>
         <Button Content="Datei auswählen" HorizontalAlignment="Left" Height="21" Margin="339,26,0,0" VerticalAlignment="Top" Width="104" Click="Dateiauswahl_Click"/>
+        <Button Content="Zielort auswählen" HorizontalAlignment="Left" Height="19" Margin="339,60,0,0" VerticalAlignment="Top" Width="104"/>
+        <TextBlock HorizontalAlignment="Left" Margin="24,36,0,0" TextWrapping="Wrap" Text="Dateipfad" VerticalAlignment="Top" Height="18" Width="287" Foreground="Black" Background="#FFAEAEAE"/>
+        <TextBlock HorizontalAlignment="Left" Margin="24,66,0,0" TextWrapping="Wrap" Text="Zielpfad" VerticalAlignment="Top" Height="18" Width="287" Foreground="Black" Background="#FFAEAEAE"/>
+        <TextBox HorizontalAlignment="Left" Height="18" Margin="24,100,0,0" TextWrapping="Wrap" Text="Neuer Dateiname (optional)" VerticalAlignment="Top" Width="287"/>
 
     </Grid>
 </Window>
