--- a/Packer_Projekt/MainWindow.xaml
+++ b/Packer_Projekt/MainWindow.xaml
@@ -5,16 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Packer_Projekt"
         mc:Ignorable="d"
-        Title="Selfmade-Packer" Height="394.5" Width="560">
+        Title="Selfmade-Packer" Height="285" Width="496">
     <Grid x:Name="grid">
-        <Button Content="Verpacken" HorizontalAlignment="Left" Margin="24,145,0,0" VerticalAlignment="Top" Width="168" Height="144" Click="Verpacken_Click"/>
-        <Button x:Name="Entpacken" Content="Entpacken" HorizontalAlignment="Left" Margin="240,145,0,0" VerticalAlignment="Top" Width="172" Height="144" Click="Entpacken_Click"/>
-        <Button Content="Datei auswählen" HorizontalAlignment="Left" Height="21" Margin="339,26,0,0" VerticalAlignment="Top" Width="104" Click="Dateiauswahl_Click"/>
-        <Button Content="Zielort auswählen" HorizontalAlignment="Left" Height="19" Margin="339,60,0,0" VerticalAlignment="Top" Width="104" Click="Zielort_Click"/>
-        <TextBlock x:Name="tb_Datei" HorizontalAlignment="Left" Margin="24,36,0,0" TextWrapping="Wrap" Text="Dateipfad" VerticalAlignment="Top" Height="18" Width="287" Foreground="Black" Background="#FFAEAEAE"/>
-        <TextBlock x:Name="tb_Ziel" HorizontalAlignment="Left" Margin="24,66,0,0" TextWrapping="Wrap" Text="Zielpfad" VerticalAlignment="Top" Height="18" Width="287" Foreground="Black" Background="#FFAEAEAE"/>
-        <TextBox x:Name="tb_Name" HorizontalAlignment="Left" Height="18" Margin="24,103,0,0" TextWrapping="Wrap" Text="Neuer Dateiname (optional)" VerticalAlignment="Top" Width="287"/>
-        <TextBlock x:Name="tb_Status" HorizontalAlignment="Left" Height="26" Margin="24,313,0,0" TextWrapping="Wrap" Text="Status" VerticalAlignment="Top" Width="388"/>
+        <Button Content="Verpacken" HorizontalAlignment="Left" Margin="10,134,0,0" VerticalAlignment="Top" Width="210" Height="60" Click="Verpacken_Click"/>
+        <Button x:Name="Entpacken" Content="Entpacken" HorizontalAlignment="Left" Margin="260,134,0,0" VerticalAlignment="Top" Width="210" Height="60" Click="Entpacken_Click"/>
+        <Button Content="Datei auswählen" HorizontalAlignment="Left" Height="20" Margin="360,10,0,0" VerticalAlignment="Top" Width="110" Click="Dateiauswahl_Click"/>
+        <Button Content="Zielort auswählen" HorizontalAlignment="Left" Height="20" Margin="360,47,0,0" VerticalAlignment="Top" Width="110" Click="Zielort_Click"/>
+        <TextBlock x:Name="tb_Datei" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="Dateipfad" VerticalAlignment="Top" Height="20" Width="330" Foreground="Black" Background="#FFAEAEAE"/>
+        <TextBlock x:Name="tb_Ziel" HorizontalAlignment="Left" Margin="10,47,0,0" TextWrapping="Wrap" Text="Zielpfad" VerticalAlignment="Top" Height="20" Width="330" Foreground="Black" Background="#FFAEAEAE"/>
+        <TextBox x:Name="tb_Name" HorizontalAlignment="Left" Height="20" Margin="10,85,0,0" TextWrapping="Wrap" Text="Neuer Dateiname (optional)" VerticalAlignment="Top" Width="330"/>
+        <TextBlock x:Name="tb_Status" HorizontalAlignment="Left" Height="26" Margin="10,215,0,0" TextWrapping="Wrap" Text="Status" VerticalAlignment="Top" Width="463" Background="#FFEEEEEE"/>
 
     </Grid>
 </Window>
